classDiagram
    direction LR

    class UsuarioBrain {
        <<Domain Model>>
        +usuarioId: UUID
        +login: String
        +nombre: String
        +email: String
        +passwordHash: String
        +activo: Boolean
        +lastLoginAt: OffsetDateTime
        +lastLoginIp: String
        +failedLoginAttempts: Short
        +lockedUntil: OffsetDateTime
        +passwordChangedAt: OffsetDateTime
    }

    class UsuarioBrainEntity {
        <<JPA Entity>>
        +usuarioId: UUID
        +login: String
        +nombre: String
        +email: String
        +passwordHash: String
        +activo: Boolean
        +lastLoginAt: OffsetDateTime
        +lastLoginIp: String
        +failedLoginAttempts: Short
        +lockedUntil: OffsetDateTime
        +passwordChangedAt: OffsetDateTime
    }

    class UsuarioBrainMapper {
        +toDomain(UsuarioBrainEntity): UsuarioBrain
        +toEntity(UsuarioBrain): UsuarioBrainEntity
    }

    class UsuarioBrainResponse {
        <<Response DTO>>
        +usuarioId: UUID
        +login: String
        +nombre: String
        +email: String
        +activo: Boolean
        +lastLoginAt: OffsetDateTime
        +lastLoginIp: String
        +failedLoginAttempts: Short
        +lockedUntil: OffsetDateTime
        +passwordChangedAt: OffsetDateTime
    }

    class UsuarioBrainDtoMapper {
        +toResponse(UsuarioBrain): UsuarioBrainResponse
    }

    class UsuarioEmpresaBrain {
        <<Domain Model>>
        +usuarioEmpresaId: UUID
        +usuarioId: UUID
        +empresaId: UUID
        +activo: Boolean
    }

    class UsuarioEmpresaBrainEntity {
        <<JPA Entity>>
        +usuarioEmpresaId: UUID
        +usuarioId: UUID
        +empresaId: UUID
        +activo: Boolean
    }

    class UsuarioEmpresaBrainMapper {
        +toDomain(UsuarioEmpresaBrainEntity): UsuarioEmpresaBrain
        +toEntity(UsuarioEmpresaBrain): UsuarioEmpresaBrainEntity
    }

    class UsuarioEmpresaBrainResponse {
        <<Response DTO>>
        +usuarioEmpresaId: UUID
        +usuarioId: UUID
        +empresaId: UUID
        +activo: Boolean
    }

    class UsuarioEmpresaBrainDtoMapper {
        +toResponse(UsuarioEmpresaBrain): UsuarioEmpresaBrainResponse
    }

    class UsuarioNegocioBrain {
        <<Domain Model>>
        +usuarioNegocioId: UUID
        +usuarioId: UUID
        +negocioId: Integer
        +activo: Boolean
    }

    class UsuarioNegocioBrainEntity {
        <<JPA Entity>>
        +usuarioNegocioId: UUID
        +usuarioId: UUID
        +negocioId: Integer
        +activo: Boolean
    }

    class UsuarioNegocioBrainMapper {
        +toDomain(UsuarioNegocioBrainEntity): UsuarioNegocioBrain
        +toEntity(UsuarioNegocioBrain): UsuarioNegocioBrainEntity
    }

    class NegocioInfo {
        <<Domain Model>>
        +negocioId: Integer
        +empresaId: UUID
        +nombre: String
        +tenantId: String
    }

    class UsuarioNegocioConNegocioBrain {
        <<Domain Model>>
        +usuarioNegocioId: UUID
        +usuarioId: UUID
        +negocioId: Integer
        +activo: Boolean
        +negocio: NegocioInfo
    }

    class UsuarioNegocioBrainResponse {
        <<Response DTO>>
        +usuarioNegocioId: UUID
        +usuarioId: UUID
        +negocioId: Integer
        +activo: Boolean
    }

    class NegocioResponse {
        <<Response DTO>>
        +negocioId: Integer
        +empresaId: UUID
        +nombre: String
        +tenantId: String
    }

    class UsuarioNegocioConNegocioResponse {
        <<Response DTO>>
        +usuarioNegocioId: UUID
        +usuarioId: UUID
        +negocioId: Integer
        +activo: Boolean
        +negocio: NegocioResponse
    }

    class UsuarioNegocioBrainDtoMapper {
        +toResponse(UsuarioNegocioBrain): UsuarioNegocioBrainResponse
        +toConNegocioResponse(UsuarioNegocioConNegocioBrain): UsuarioNegocioConNegocioResponse
    }

    UsuarioBrainMapper --> UsuarioBrainEntity
    UsuarioBrainMapper --> UsuarioBrain
    UsuarioBrainDtoMapper --> UsuarioBrain
    UsuarioBrainDtoMapper --> UsuarioBrainResponse

    UsuarioEmpresaBrainMapper --> UsuarioEmpresaBrainEntity
    UsuarioEmpresaBrainMapper --> UsuarioEmpresaBrain
    UsuarioEmpresaBrainDtoMapper --> UsuarioEmpresaBrain
    UsuarioEmpresaBrainDtoMapper --> UsuarioEmpresaBrainResponse

    UsuarioNegocioBrainMapper --> UsuarioNegocioBrainEntity
    UsuarioNegocioBrainMapper --> UsuarioNegocioBrain
    UsuarioNegocioConNegocioBrain --> NegocioInfo : tiene
    UsuarioNegocioBrainDtoMapper --> UsuarioNegocioBrain
    UsuarioNegocioBrainDtoMapper --> UsuarioNegocioBrainResponse
    UsuarioNegocioBrainDtoMapper --> UsuarioNegocioConNegocioResponse
    UsuarioNegocioConNegocioResponse --> NegocioResponse : tiene
